# blog

./: .gitignore  about.html  about.md  archive.html  blog-hakyll.cabal  deploy  deploy.sh  hie.yaml  index.html  site.hs  stack.yaml
css/: default.css  default.scss
dist-newstyle/cache/: compiler  config
posts/: 2018-04-13-migration.html  2018-04-13-migration.markdown  2018-10-02-icfp-2018.html  2018-10-02-icfp-2018.md  2021-01-27-rank-nullity-theorem.html  2021-01-27-rank-nullity-theorem.md  2021-01-28-rank-nullity-theorem.html  2021-01-28-rank-nullity-theorem.md  2021-09-27-jsps-dc1.html  2021-09-27-jsps-dc1.md
tags/: abstract-algebra.html  application.html  fp.html  icfp.html  jsps.html  linear-algebra.html  math.html  meta.html  misc.html  pl.html  research.html  scholarship.html
templates/: default.html  post.html
