name:               blog-hakyll
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , hakyll-sass == 0.2.*
  ghc-options:      -threaded
  default-language: Haskell2010
